--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "start": "webpack-dev-server .",
+    "start": "webpack serve --config webpack.config.js --hot --open",
     "build": "webpack .",
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepare": "husky install"
@@ -39,7 +39,8 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.27.0"
   },
   "lint-staged": {
     "*.js": "eslint --cache --fix",
