--- a/package.json
+++ b/package.json
@@ -22,9 +22,14 @@
     "css-loader": "^7.1.2",
     "css-minimizer-webpack-plugin": "^7.0.0",
     "cypress": "^13.15.0",
-    "eslint": "^9.12.0",
+    "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-cypress": "^4.1.0",
+    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-react": "^7.37.1",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "eslint-plugin-unicorn": "^56.0.0",
     "globals": "^15.11.0",
     "html-webpack-plugin": "^5.6.3",
     "husky": "^9.1.6",
@@ -38,6 +43,7 @@
     "webpack-dev-server": "^5.1.0"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0"
